@startuml

title __HELLOWORLDJFXDEMO2022's Class Diagram__\n

  namespace lunarLander {
    class Camera {
    }
  }
  

  namespace lunarLander {
    class HelloWorld {
    }
  }
  

  namespace lunarLander {
    class Rocket {
    }
  }
  

  namespace lunarLander {
    class Sprite {
    }
  }
  

  lunarLander.HelloWorld -up-|> javafx.application.Application
  lunarLander.HelloWorld o-- lunarLander.Camera : camera
  lunarLander.HelloWorld o-- lunarLander.Rocket : rocket
  lunarLander.HelloWorld o-- lunarLander.Sprite : ufo
  lunarLander.Rocket -up-|> lunarLander.Sprite


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
